# AMR-Guard

./: .env.example  .gitattributes  .gitignore  PLAN.md  README.md  The-MedGemma-Impact-Challenge.txt  WRITEUP.md  app.py  main.py  pyproject.toml  requirements.txt  setup_demo.py
data/chroma_db/: chroma.sqlite3
docs/: KNOWLEDGE_STORAGE_STRATEGY.md
docs/Antibiotic_guidelines/: EML export-ACCESS group.xlsx  EML export-RESERVE group.xlsx  EML export-WATCH group.xlsx
docs/antibiotic_guidelines/: EML export-WATCH group.xlsx
docs/mic_breakpoints/: v_16.0__BreakpointTables.xlsx
docs/pathogen_resistance/: ATLAS Susceptibility Data Export.xlsx
notebooks/: kaggle_medic_demo.ipynb
scripts/: ingest_data.py
src/: __init__.py  agents.py  config.py  form_config.py  graph.py  loader.py  prompts.py  rag.py  state.py  utils.py
src/Med_I_C.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/db/: __init__.py  database.py  import_data.py  schema.sql  vector_store.py
src/tools/: __init__.py  antibiotic_tools.py  rag_tools.py  resistance_tools.py  safety_tools.py
